@@ -900,58 +900,6 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
-comment|/*     * Test that changes to the dictionary stemming table are applied immediately    * when using reusable token streams.    */
-DECL|method|testStemDictionaryReuse
-specifier|public
-name|void
-name|testStemDictionaryReuse
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-name|DutchAnalyzer
-name|a
-init|=
-operator|new
-name|DutchAnalyzer
-argument_list|(
-name|TEST_VERSION_CURRENT
-argument_list|)
-decl_stmt|;
-name|checkOneTermReuse
-argument_list|(
-name|a
-argument_list|,
-literal|"lichamelijk"
-argument_list|,
-literal|"licham"
-argument_list|)
-expr_stmt|;
-name|File
-name|customDictFile
-init|=
-name|getDataFile
-argument_list|(
-literal|"customStemDict.txt"
-argument_list|)
-decl_stmt|;
-name|a
-operator|.
-name|setStemDictionary
-argument_list|(
-name|customDictFile
-argument_list|)
-expr_stmt|;
-name|checkOneTermReuse
-argument_list|(
-name|a
-argument_list|,
-literal|"lichamelijk"
-argument_list|,
-literal|"somethingentirelydifferent"
-argument_list|)
-expr_stmt|;
-block|}
 comment|/**    * Prior to 3.1, this analyzer had no lowercase filter.    * stopwords were case sensitive. Preserve this for back compat.    * @deprecated (3.1) Remove this test in Lucene 5.0    */
 annotation|@
 name|Deprecated
